<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
            android:icon="@mipmap/ic_god"
            android:key="@string/pref_key_detail_rule_info"
            android:selectable="false"
            android:title="@string/app_name" />

    <com.kaisar.xposed.godmode.ui.preference.ImageViewPreference android:key="@string/pref_key_detail_preview_image" />

    <Preference
            android:key="@string/pref_key_detail_rule_created_time"
            android:title="@string/rule_details_field_create_time" />

    <Preference
            android:key="@string/pref_key_detail_rule_match_version"
            android:title="@string/rule_details_field_generate_version" />

    <Preference
            android:key="@string/pref_key_detail_rule_applied_activity"
            android:title="@string/rule_details_field_activity" />

    <EditTextPreference
            android:dialogTitle="@string/rule_details_set_alias"
            android:key="@string/pref_key_detail_rule_alias"
            android:persistent="false"
            android:summary="@string/rule_details_set_alias"
            android:title="@string/rule_details_field_alias" />

    <Preference
            android:key="@string/pref_key_detail_view_bounds"
            android:title="@string/rule_details_field_view_bounds" />

    <Preference
            android:key="@string/pref_key_detail_view_type"
            android:title="@string/rule_details_field_view_type" />

    <Preference
            android:key="@string/pref_key_detail_view_depth"
            android:title="@string/rule_details_field_view_depth" />

    <Preference
            android:key="@string/pref_key_detail_view_res_name"
            android:title="@string/rule_details_field_res_name" />

    <Preference
            android:key="@string/pref_key_detail_view_text"
            android:title="@string/rule_details_field_text"
            app:isPreferenceVisible="false" />

    <Preference
            android:key="@string/pref_key_detail_view_description"
            android:title="@string/rule_details_field_description"
            app:isPreferenceVisible="false" />

    <Preference
            android:key="@string/pref_key_detail_mod_width"
            android:title="@string/modify_width"
            app:isPreferenceVisible="false" />

    <Preference
            android:key="@string/pref_key_detail_mod_height"
            android:title="@string/modify_height"
            app:isPreferenceVisible="false" />

    <Preference
            android:key="@string/pref_key_detail_mod_alpha"
            android:title="@string/modify_alpha"
            app:isPreferenceVisible="false" />

    <Preference
            android:key="@string/pref_key_detail_mod_position"
            android:title="@string/modify_position"
            app:isPreferenceVisible="false" />

    <Preference
            android:key="@string/pref_key_detail_mod_text"
            android:title="@string/modify_text"
            app:isPreferenceVisible="false" />

    <Preference
            android:key="@string/pref_key_detail_mod_image"
            android:title="@string/modify_image_pick"
            app:isPreferenceVisible="false" />

    <DropDownPreference
            android:entries="@array/visible_entries"
            android:entryValues="@array/visible_values"
            android:key="@string/pref_key_detail_view_visible"
            android:persistent="false"
            android:title="@string/rule_details_field_visible" />

</PreferenceScreen>
