<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.kaisar.xposed.godmode.preference.ProgressPreference android:key="@string/pref_key_progress_indicator" />

    <PreferenceCategory android:title="@string/pref_header_general">
        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:icon="@drawable/ic_puzzle"
                android:key="@string/pref_key_master"
                android:summary="@string/pref_description_god_mode"
                android:title="@string/pref_title_god_mode" />
        <Preference
                android:key="@string/pref_key_guide"
                android:summary="@string/pref_description_guide"
                android:title="@string/pref_title_guide" />
    </PreferenceCategory>

    <PreferenceCategory
            android:key="@string/pref_key_app_rules"
            android:title="@string/pref_header_app_rules">

    </PreferenceCategory>

</PreferenceScreen>
