<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav_graph"
        app:startDestination="@id/generalPreferenceFragment">

    <fragment
            android:id="@+id/generalPreferenceFragment"
            android:name="com.kaisar.xposed.godmode.fragment.GeneralPreferenceFragment"
            android:label="@string/app_name">
        <action
                android:id="@+id/action_generalPreferenceFragment_to_viewRuleListFragment"
                app:destination="@id/viewRuleListFragment"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_generalPreferenceFragment_to_guideFragment"
                app:destination="@id/guideFragment"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_generalPreferenceFragment_to_aboutFragment"
                app:destination="@id/aboutFragment"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_generalPreferenceFragment_to_settingsFragment"
                app:destination="@id/settingsFragment"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
    </fragment>
    <fragment
            android:id="@+id/guideFragment"
            android:name="com.kaisar.xposed.godmode.fragment.GuideFragment"
            android:label="@string/guide_title" />
    <fragment
            android:id="@+id/aboutFragment"
            android:name="com.kaisar.xposed.godmode.fragment.AboutFragment"
            android:label="@string/about_title" />
    <fragment
            android:id="@+id/settingsFragment"
            android:name="com.kaisar.xposed.godmode.fragment.SettingsFragment"
            android:label="@string/toolbar_settings_title" />
    <fragment
            android:id="@+id/viewRuleListFragment"
            android:name="com.kaisar.xposed.godmode.fragment.RuleRecordListFragment"
            android:label="@string/title_app_rule">
        <action
                android:id="@+id/action_viewRuleListFragment_to_viewRuleDetailsContainerFragment"
                app:destination="@id/viewRuleDetailsContainerFragment"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
    </fragment>
    <fragment
            android:id="@+id/viewRuleDetailsContainerFragment"
            android:name="com.kaisar.xposed.godmode.fragment.RuleRecordDetailsContainerFragment"
            android:label="@string/title_rule_details">
        <argument
                android:name="curIndex"
                app:argType="integer" />
    </fragment>
</navigation>
